# model/model.go
@@ -6,3 +6,10 @@ type Album struct {
 	Artist string  `json:"artist"`
 	Price  float64 `json:"price"`
 }
+
+type ServiceCode struct {
+	ID           int    `json:"id"`
+	Name         string `json:"name"`
+	Description  string `json:"description"`
+	BusinessUnit string `json:"business_unit"`
+}
